--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.open-in-view=false
+
+spring.liquibase.change-log=classpath:liquibase/db.changelog.yaml
+spring.liquibase.enabled=true
+spring.liquibase.default-schema=public
